--- a/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
@@ -1,5 +1,11 @@
 
 <div class="calendar-section">
+  <div class="top-actions">
+    <button mat-button color="primary" (click)="navigateToBibliografia()">
+      <mat-icon>arrow_back</mat-icon>
+      Voltar para Bibliografia
+    </button>
+  </div>
   <mat-card class="calendar-card">
     <mat-card-header>
       <mat-icon class="calendar-icon">calendar_month</mat-icon>
