--- a/frontend-cemos/src/app/pages/home/home-landing/estatistica-user/estatistica-user.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/estatistica-user/estatistica-user.html
@@ -1,4 +1,10 @@
 <section class="estatistica-section">
+  <div class="top-actions">
+    <button mat-button color="primary" (click)="navigateToBibliografia()">
+      <mat-icon>arrow_back</mat-icon>
+      Voltar para Bibliografia
+    </button>
+  </div>
   <header class="estatistica-header">
     <h1>Estatísticas</h1>
     <p>Acompanhe seu desempenho consolidado.</p>
