--- a/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
@@ -1,9 +1,9 @@
 
 <div class="calendar-section">
   <div class="top-actions">
-    <button mat-button color="primary" (click)="navigateToBibliografia()">
+    <button mat-button color="primary" (click)="navigateHome()">
       <mat-icon>arrow_back</mat-icon>
-      Voltar para Bibliografia
+      Voltar para Home
     </button>
   </div>
   <mat-card class="calendar-card">
