--- a/frontend-cemos/src/app/pages/home/home-landing/estatistica-user/estatistica-user.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/estatistica-user/estatistica-user.html
@@ -1,8 +1,8 @@
 <section class="estatistica-section">
   <div class="top-actions">
-    <button mat-button color="primary" (click)="navigateToBibliografia()">
+    <button mat-button color="primary" (click)="navigateHome()">
       <mat-icon>arrow_back</mat-icon>
-      Voltar para Bibliografia
+      Voltar para Home
     </button>
   </div>
   <header class="estatistica-header">
