--- a/frontend-cemos/src/app/pages/home/home-landing/bibliografia-id/bibliografia-id.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/bibliografia-id/bibliografia-id.html
@@ -1,8 +1,8 @@
 <section class="bibliografia-section">
   <div class="top-actions">
-    <button mat-stroked-button color="primary" (click)="navigateToBibliografia()">
-      <mat-icon>menu_book</mat-icon>
-      Bibliografia
+    <button mat-stroked-button color="primary" (click)="navigateHome()">
+      <mat-icon>arrow_back</mat-icon>
+      Voltar para Home
     </button>
   </div>
 
