--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.scss
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.scss
@@ -163,6 +163,14 @@
   }
 }
 
+.section-title {
+  margin: 0 0 1.5rem 0;
+  font-size: 1.8rem;
+  color: #1a237e;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
 .divider {
   height: 2px;
   width: 100%;
