--- a/frontend-cemos/src/app/pages/home/home-landing/bibliografia-id/bibliografia-id.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/bibliografia-id/bibliografia-id.html
@@ -1,8 +1,7 @@
 <section class="bibliografia-section">
-  <div class="top-actions">
-    <button mat-stroked-button color="primary" (click)="navigateHome()">
-      <mat-icon>arrow_back</mat-icon>
-      Voltar para Home
+  <div class="navigation-buttons">
+    <button mat-stroked-button color="primary" (click)="navigateHome()" aria-label="Voltar para Home">
+      <mat-icon>arrow_back</mat-icon> Voltar à Página Principal
     </button>
   </div>
 
