--- a/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/cronograma/cronograma.html
@@ -1,9 +1,8 @@
 
 <div class="calendar-section">
-  <div class="top-actions">
-    <button mat-button color="primary" (click)="navigateHome()">
-      <mat-icon>arrow_back</mat-icon>
-      Voltar para Home
+  <div class="navigation-buttons">
+    <button mat-stroked-button color="primary" (click)="navigateHome()" aria-label="Voltar para Home">
+      <mat-icon>arrow_back</mat-icon> Voltar à Página Principal
     </button>
   </div>
   <mat-card class="calendar-card">
