--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
@@ -1,5 +1,6 @@
 <div class="landing-container">
-  <h2 class="section-title">Matérias</h2>
+  <h2 class="section-title">Bem vindo {{ currentUsername() }}!</h2>
+  <h3 class="section-subtitle">Matérias</h3>
 
   <div class="modules-grid">
     <mat-card class="module-card" (click)="navigateTo(['app1-intendencia', 'bibliografia'])">
