--- a/frontend-cemos/src/app/components/perguntas/estatisticas/estatisticas.html
+++ b/frontend-cemos/src/app/components/perguntas/estatisticas/estatisticas.html
@@ -4,8 +4,8 @@
     <mat-tab>
       <ng-template mat-tab-label>
         <div class="tab-label-content">
-          <img src="/assets/img/svg/statistcs.svg" alt="Estatísticas" class="tab-icon" />
-          <span>Minhas Estatísticas</span>
+          <img src="/assets/img/svg/estatisticas.svg" alt="Estatísticas" class="tab-icon" />
+          <span><b>Estatísticas</b></span>
         </div>
       </ng-template>
       <ng-template matTabContent>
@@ -24,8 +24,8 @@
     <mat-tab *ngIf="isAdmin">
       <ng-template mat-tab-label>
         <div class="tab-label-content">
-          <img src="/assets/img/svg/benchmark.svg" alt="Benchmark" class="tab-icon" />
-          <span>Estatísticas Gerais</span>
+          <img src="/assets/img/svg/geral.svg" alt="Benchmark" class="tab-icon" />
+          <span><b>Estatísticas Gerais</b></span>
         </div>
       </ng-template>
       <ng-template matTabContent>
